# aliasify

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sample.txt
aliasify/: __init__.py  _entity_replacer.py  main.py
